[package]
name = "jg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.99"
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.26"
uuid = { version = "1.4.0", features = ["v4"] }
